[package]
name = "learn-rendy"
version = "0.1.0"
authors = ["Gray Olson <gray@grayolson.com>"]
repository = "https://github.com/termhn/learn-rendy"
readme = "README.md"
keywords = ["gfx-hal", "rendy", "graphics", "tutorial"]
edition = "2018"
description = "A tutorial and examples for using rendy."
license = "Apache-2.0"

[features]
default = ["rendy"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]

[dependencies]
genmesh = "0.6"
nalgebra = "0.16"
env_logger = "0.5"
failure = "0.1"
lazy_static = "1.0"
image = "0.20.1"
log = "0.4"
winit = "0.18"
palette = "0.4"
rand = "0.6"
gfx-hal = "0.1"

[dependencies.rendy]
optional = true
# path = "../rendy/rendy"
features = ["texture-image"]
git = "https://github.com/omni-viral/rendy"
rev = "d9c3e2751ed41e361275a81a6d5a22eea53634d5"


# [patch.crates-io]
# gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
# gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git" }
# gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git" }